--- a/IconicApartments/assets/css/Style.css
+++ b/IconicApartments/assets/css/Style.css
@@ -1,112 +1,20 @@
-input[type=text], input[type=password], input[type=email],input[type=date] {
-    background: none;
-    border: none;
-    border-bottom: 1px solid rgb(216, 214, 214);
-  }
-
-  input[type=text]:hover, input[type=password]:hover, input[type=email]:hover,input[type=date]:hover {
-    background: none;
-    border: none;
-    border-bottom: 2px solid rgb(158, 157, 157);
-  }
-
-  select{
-      background: none;
-      color: rgb(118, 118, 119);
-  }
-
-  /* form {
-      color: rgb(223, 223, 226);
-      background-color: none;
-    
-  } */
-
-  #registerform {
-    background: none;
-  }
 
   body{
     background-image: url("../img/background1.jpg");
     background-repeat: repeat;   
   }
-  /* h2,h3{
-      color:bisque;
-  } */
 
-  .formbutton {
-    background:none;
-    border: none;
-    color: rgb(18, 18, 19);
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 22px;
-    -webkit-transition-duration: 0.4s; /* Safari */
+  .my_button{
+
+    my_button
+  }
+
+  .my_button {
+    -webkit-transition-duration: 0.4s; 
     transition-duration: 0.4s;
   }
-
-  .formbutton:hover{
-    background:none;
-    border:rgb(158, 157, 157);
-    color: rgb(59, 59, 59);
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 22px;
-  }
-
-
-  .button1 {
-    background:none;
-    border: none;
-    color: rgb(27, 27, 27);
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 22px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    border: 1px solid rgb(143, 145, 143);
-  }
-
-  .button1:hover{
-    background:none;
-    border:rgb(158, 157, 157);
-   
-    color: rgb(79, 79, 80);
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    border: 2px solid rgb(143, 145, 143);
-  }
-
-  table{
-      color: black;
-  }
-  #user_id{
-      background: none;
-      border-bottom: none;
-      color: aliceblue;
-  }
-
-  .register {
-    background:none;
-    border: none;
-    color: rgb(243, 244, 245);
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-  }
-
-  tbody #tble th, td {
-    border-bottom: 1px solid rgb(129, 128, 128);
+  
+  .my_button:hover {
+    background-color: #4CAF50; 
+    color: white;
   }
