--- a/IconicApartments/assets/css/Style.css
+++ b/IconicApartments/assets/css/Style.css
@@ -1,7 +1,8 @@
 
   body{
     background-image: url("../img/background1.jpg");
-    background-repeat: repeat;  
+    background-repeat: no-repeat;
+    background-attachment: fixed;  
   }
 
   /* .my_button{
@@ -22,6 +23,28 @@
 .list-group-item{
   background: none;
 }
+
+.carousel-inner > .item {
+  height: 400px;
+}
+
+.header {
+  background-image: url('../img/gym.jpg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}  
+
+.overlay {
+  position: absolute;
+  min-height: 100%;
+  min-width: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+
   /* .dropdown-menu {
     min-width: 200px !important;
     right:0;
